--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         // front content here:
         let themen_name_label = new Label({
           text: "",
-          color: white, //"#4B0082",
+          color: "#9A3C99",
         }).pos(720, 103, null, null, front);
 
         let themen_nr_label = new Label({
