todo: add api_key to generateQuizset

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             headers: {
               "Content-Type": "application/json",
               accept: "application/json",
+              //TODO: add Api_key for FastAPI (get the key from a DB...)
             },
             body: {},
           }
