--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
       async function ready() {
         STYLE = { font: my_font };
+
         const front = new TextureActive({
           width: W,
           height: H,
@@ -76,12 +77,12 @@
         // front content here:
         let themen_name_label = new Label({
           text: "",
-          color: "#9A3C99",
-        }).pos(720, 103, null, null, front);
+          color: white, // "#4B0082", //"#9A3C99",
+        }).pos(600, 103, null, null, front);
 
         let themen_nr_label = new Label({
-          text: "Topic:",
-          color: "#9A3C99",
+          text: "Topic (Question-Set):",
+          color: white, //"#4B0082", //"#9A3C99",
         }).pos(20, 103, null, null, front);
 
         let themen_nr_input = new Stepper({
@@ -90,12 +91,13 @@
           size: 28,
           min: 1,
           max: 99,
-          color: "#9A3C99",
-        }).pos(320, 91, null, null, front);
+          color: white, //"#9A3C99",
+          backgroundColor: "#4B0082",
+        }).pos(400, 91, null, null, front);
 
         let frage_nr_label = new Label({
           text: "Question (1-3):",
-          color: "#9A3C99",
+          color: white, //"#4169E1", //"#9A3C99",
         }).pos(20, 175, null, null, front);
 
         let frage_nr_input = new Stepper({
@@ -104,8 +106,9 @@
           size: 28,
           min: 1,
           max: 3,
-          color: "#9A3C99",
-        }).pos(320, 164, null, null, front);
+          color: white, //"#9A3C99",
+          backgroundColor: "#4169E1",
+        }).pos(400, 164, null, null, front);
 
         let prevCorrLabels = [];
         let prevTopicLists = [];
@@ -114,7 +117,7 @@
         let label_topic = new Label({
           text: "Enter new topic:",
           align: "right",
-          color: "#9B3F9B",
+          color: yellow, //"#4B0082", //"#9B3F9B",
         }).pos(240, 120, RIGHT, null, front);
 
         const input = new TextInput({
@@ -136,7 +139,15 @@
           my_main();
         }
 
-        new Button(385, 60, "generate new topic")
+        new Button({
+          width: 385,
+          heitht: 60,
+          label: "generate new topic",
+          backgroundColor: yellow,
+          color: "#4B0082",
+          rollBackgroundColor: "#4B0082",
+          rollColor: yellow,
+        })
           .pos(110, 250, RIGHT, null, front)
           .tap(async () => {
             if (zot(input.text) || input.text == "") {
@@ -155,7 +166,7 @@
           label_topic.text = "Enter new topic:";
           label_topic.pos(240, 120, RIGHT, null, front);
           // label_topic.mov(0, 0);
-          label_topic.color = "#9B3F9B";
+          label_topic.color = yellow; //"#4B0082"; //"#9B3F9B";
         });
 
         async function my_main() {
@@ -189,7 +200,7 @@
               parsed_quiz[frage_nr]["correct_answer"]
             ];
           let thema = quizzes["messages"][message_nr]["Value"]["topic"]; //ist eine Stufe höher im ersten JSON
-          themen_name_label.text = "Loaded topic: " + thema;
+          themen_name_label.text = "Loaded: " + thema;
 
           function getAllTopics() {
             const messages = quizzes["messages"];
@@ -225,8 +236,8 @@
             viewNum: 8,
             corner: 10,
             list: list_topics_numbered,
-            titleBar: "Load Topics",
-            titleBarBackgroundColor: "#9B3F9B",
+            titleBar: "Topics:",
+            titleBarBackgroundColor: "#4B0082", //"#9B3F9B",
             titleBarColor: white,
             scrollBarActive: true,
             close: true,
@@ -289,7 +300,7 @@
               text: `${key}`,
               color: "white",
               bold: true,
-              backgroundColor: "#4B0082",
+              backgroundColor: "#4169E1", //"#4B0082",
               size: 80,
               corner: 10,
             }).hov("#6AB04D");
@@ -346,9 +357,15 @@
           S.update();
         }
 
-        //part to fetch questions from Redis
-
-        let button_next = new Button(345, 60, "Next question", "#4169E1")
+        let button_next = new Button({
+          width: 345,
+          height: 60,
+          label: "Next question",
+          backgroundColor: "#4169E1",
+          rollBackgroundColor: white,
+          color: white,
+          rollColor: "#4169E1",
+        })
           .pos(720, 250, null, null, front)
           .tap(checkQnr);
 
@@ -366,7 +383,15 @@
           }
         }
 
-        new Button(650, 60, "Load selected question", "#4169E1")
+        new Button({
+          width: 650,
+          height: 60,
+          label: "Load selected question",
+          backgroundColor: "#4169E1",
+          color: white,
+          rollBackgroundColor: white,
+          rollColor: "#4169E1",
+        })
           .pos(20, 250, null, null, front)
           .tap(() => {
             themen_name_label.text = "...loading...";
@@ -415,7 +440,16 @@
           outlineColor: "#4169E1",
         }).pos(20, 20, null, null, front);
 
-        new Button(385, 60, "FastAPI Backend")
+        //width, height, label, backgroundColor, rollBackgroundColor, color, rollBackgroundColor, rollColor
+        new Button({
+          width: 385,
+          Height: 60,
+          label: "FastAPI Backend",
+          backgroundColor: yellow,
+          color: "#4B0082",
+          rollBackgroundColor: "#4B0082",
+          rollColor: yellow,
+        })
           .pos(110, 20, RIGHT, TOP, front)
           .tap(() => {
             zgo("https://langchainquizgenerator-ajerni.b4a.run/docs", "_blank");
