--- a/index.html
+++ b/index.html
@@ -545,7 +545,9 @@
           controls,
           1,
           0,
-          1000
+          1000,
+          null,
+          -1
         );
 
         // const canvasWindow = three.makePanel(front, textureActives, null, -50);
